--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Byefron Skybox Studio</title>
-<link rel="stylesheet" href="skybox_cutter.css">
+<link rel="stylesheet" href="skybox_cutter.css?v=4">
 </head>
 <body>
 
@@ -252,6 +252,6 @@
 </div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
-<script src="skybox_cutter.js"></script>
+<script src="skybox_cutter.js?v=4"></script>
 </body>
 </html>
